# protogia.github.io

./: .gitignore  .gitmodules  hugo.toml  pyproject.toml  url_validation.py
.github/workflows/: daily-stats.yaml  hugo.yaml  link-check.yml  url-validation.yml  weekly-rotation.yml
archetypes/: blog.md  favourites.md  gists.md  projects.md
content/: _index.md  about.md  home.md
content/aboutthisblog/: about.md  are-you-currently-working-on-projects.md  are-you-open-for-contributions.md  do-you-use-analytics.md  does-this-blog-use-analytics.md  how-is-this-website-build.md
content/blog/: Opendata-Overview.md  Rette-ein-remote-Gerät-wenn-dateisystem-voll-ohne-Datenverlust.md  a.md  b.md  braunschweigs-data.md  eine-datenanalyse-über-braunschweig.md  evaluate-dual-mesh-wifi-connection.md  evaluate-dual-mesh-wlan-connection.md  evaluate-meshwifi-connection.md  formula1-gp-brazil-preview-2025.md  formula1-gp-brazil-review-2025.md  opendata-meta-information-overview.md  programming-AVRs-with-nim.md  rescue-remote-systems.md  wifi-bandwith-to-distance-relation.md
content/favourites/: nikolasent.md
content/gists/: rescue-remote-systems.md
content/offtopic/: b.md
content/projects/: beautyboot.md  c.md  convert-jupyter-notebooks-to-markdown-blogposts-for-hugo-via-github-actions.md  convert-jupyter-notebooks-to-markdown-blogposts-for-hugo.md  git-issue-reporter.md  govdata-client.md  welfen-sportscam.md
layouts/_defaults/: list.html
layouts/partials/: hero.html
notebooks/: test.ipynb
src/: __main__.py
src/websiteconfig/: config.py
static/css/: variables.css
(+48 files in other folders)
