[tool.poetry]
name = "protogia-github-io"
version = "0.1.0"
description = "Helper-scripts for imageprocessing, notebooks etc according to my website-style"
authors = ["protogia <goldengrizz01@gmail.com>"]
packages = [{include = "protogia"}]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
LiVa = "*"
rich-argparse = "^1.4.0"
argcomplete = "^3.2.3"
pillow = "^10.2.0"
opencv-python = "^4.9.0.80"
pandas = "^2.2.2"
pretty-errors = "^1.2.25"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
